[package]
name = "chip-8erooni"
version = "0.1.0"
authors = ["Andreas Meier <andreas.meier@stud.unibas.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
rand = "0.8.0"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx"]